--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/styled-components": "^5.1.26",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "jest": "^29.3.1",
-    "typescript": "^4.9.3",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4",
     "vite": "^4.0.0"
   }
 }
