--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest",
+    "leetcode": "./scripts/leetcode.mjs"
   },
   "dependencies": {
     "@codesandbox/sandpack-react": "^1.17.2",
