--- a/package.json
+++ b/package.json
@@ -8,21 +8,22 @@
     "start": "next start"
   },
   "dependencies": {
-    "@mdx-js/loader": "^2.3.0",
-    "@mdx-js/react": "^2.3.0",
-    "@next/mdx": "^13.2.4",
-    "@types/node": "18.15.10",
-    "@types/react": "18.0.30",
-    "@types/react-dom": "18.0.11",
+    "@next/mdx": "canary",
+    "@types/mdx": "^2.0.4",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.31",
+    "@types/react-dom": "^18.0.11",
+    "autoprefixer": "^10.4.14",
+    "body-scroll-lock": "4.0.0-beta.0",
+    "classnames": "^2.3.2",
+    "gray-matter": "^4.0.3",
     "next": "canary",
     "next-mdx-remote": "^4.4.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.0.2"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.3.1"
+    "react": "latest",
+    "react-dom": "latest",
+    "react-use": "^17.4.0",
+    "tailwindcss": "^3.3.1",
+    "typescript": "latest"
   }
 }
