--- a/package.json
+++ b/package.json
@@ -9,14 +9,22 @@
   },
   "dependencies": {
     "@next/mdx": "canary",
+    "@types/lodash-es": "^4.17.7",
     "@types/mdx": "^2.0.4",
     "@types/node": "^18.15.11",
-    "@types/react": "^18.0.31",
+    "@types/react": "^18.0.33",
     "@types/react-dom": "^18.0.11",
+    "ahooks": "^3.7.6",
     "autoprefixer": "^10.4.14",
     "body-scroll-lock": "4.0.0-beta.0",
     "classnames": "^2.3.2",
+    "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
+    "hast-util-has-property": "^2.0.1",
+    "hast-util-heading-rank": "^2.1.1",
+    "hast-util-to-string": "^2.0.0",
+    "immer-external-store": "^0.0.7",
+    "lodash-es": "^4.17.21",
     "next": "canary",
     "next-mdx-remote": "^4.4.1",
     "postcss": "^8.4.21",
@@ -24,6 +32,7 @@
     "react-dom": "latest",
     "react-use": "^17.4.0",
     "tailwindcss": "^3.3.1",
-    "typescript": "latest"
+    "typescript": "latest",
+    "unist-util-visit": "^4.1.2"
   }
 }
