--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@codesandbox/sandpack-react": "^2.6.0",
     "@next/mdx": "canary",
     "@types/lodash-es": "^4.17.7",
     "@types/mdx": "^2.0.4",
     "@types/node": "^18.15.11",
-    "@types/react": "^18.0.33",
+    "@types/react": "^18.0.35",
     "@types/react-dom": "^18.0.11",
     "ahooks": "^3.7.6",
     "autoprefixer": "^10.4.14",
