--- a/package.json
+++ b/package.json
@@ -8,16 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "@codesandbox/sandpack-react": "^2.6.7",
-    "@next/mdx": "canary",
-    "@types/lodash-es": "^4.17.7",
-    "@types/mdx": "^2.0.5",
-    "@types/node": "^18.16.16",
-    "@types/react": "^18.2.8",
-    "@types/react-dom": "^18.2.4",
-    "ahooks": "^3.7.7",
-    "autoprefixer": "^10.4.14",
-    "body-scroll-lock": "4.0.0-beta.0",
+    "@codesandbox/sandpack-react": "^2.8.0",
+    "@next/mdx": "13.5.3",
+    "ahooks": "^3.7.8",
     "classnames": "^2.3.2",
     "github-slugger": "^2.0.0",
     "gray-matter": "^4.0.3",
@@ -25,15 +18,21 @@
     "hast-util-heading-rank": "^2.1.1",
     "hast-util-to-string": "^2.0.0",
     "immer-external-store": "^0.0.7",
-    "lodash-es": "^4.17.21",
     "next": "canary",
     "next-mdx-remote": "^4.4.1",
-    "postcss": "^8.4.24",
     "react": "latest",
     "react-dom": "latest",
     "react-use": "^17.4.0",
-    "tailwindcss": "^3.3.2",
-    "typescript": "latest",
-    "unist-util-visit": "^4.1.2"
+    "unist-util-visit": "^5.0.0"
+  },
+  "devDependencies": {
+    "@types/mdx": "^2.0.8",
+    "@types/node": "^20.8.0",
+    "@types/react": "^18.2.23",
+    "@types/react-dom": "^18.2.8",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.3",
+    "autoprefixer": "^10.4.16",
+    "typescript": "latest"
   }
 }
